eksService5.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service5
spec:
  selector:
    app: nginx
  ports:
    - port: 80
