hw-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
